# kohls-opt-assessment

./: .gitignore  README.md  pyproject.toml
doc/: model.aux  model.tex
src/: opt_service.py
src/common/: data_center.py  store.py
src/model/: pizza_assort_optimizer.py  pizza_assortment_optimizer.py  pizza_assortment_optimizer_group.py
src/processor/: input_processor.py  output_processor.py
src/utils/: validator.py
tests/: test_data_center.py  test_model_1.py  test_model_2.py  test_store.py
tests/data/: new_pizza.csv
