[tool.poetry]
name = "kohls-opt-assessment"
version = "0.1.0"
description = ""
authors = ["Kunlei Lian <kunlei.lian@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
pandas = "^2.0.3"
ortools = "^9.7.2996"
cvxpy = "^1.3.2"
mosek = "^10.1.10"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
